[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Font/pixel_noir/Pixel-Noir Caps.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SpawnManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Font/pixel_noir/Pixel-Noir.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Music/MainTheme.wav" type="AudioStream" id=6]
[ext_resource path="res://Background.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art/BG/menu.png" type="Texture" id=8]
[ext_resource path="res://Art/BG/sound_icon.png" type="Texture" id=9]
[ext_resource path="res://highScore.gd" type="Script" id=10]
[ext_resource path="res://Art/Buttons/shoot_pressed.png" type="Texture" id=11]
[ext_resource path="res://Art/Buttons/left_pressed.png" type="Texture" id=12]
[ext_resource path="res://Art/Buttons/Shoot.png" type="Texture" id=13]
[ext_resource path="res://Art/Buttons/right.png" type="Texture" id=14]
[ext_resource path="res://Art/Buttons/right_pressed.png" type="Texture" id=15]
[ext_resource path="res://Art/Buttons/left.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_bottom = 47
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[sub_resource type="CircleShape2D" id=6]
radius = 40.0

[sub_resource type="CircleShape2D" id=7]
radius = 40.0

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
initial_y_axis_speed = 180
player_start_position = Vector2( 180, 500 )
score_increment = 25.0

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 0 )
anchor_mode = 0

[node name="HUD" type="CanvasLayer" parent="Camera2D"]

[node name="SpawnManager" parent="Camera2D/HUD" instance=ExtResource( 3 )]

[node name="StartButton" type="Button" parent="Camera2D/HUD"]
margin_left = 76.4045
margin_top = 552.158
margin_right = 282.404
margin_bottom = 616.158
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Camera2D/HUD"]
margin_left = 4.06589
margin_top = 54.2704
margin_right = 72.0659
margin_bottom = 68.2704
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Camera2D/HUD"]
anchor_top = -0.00110483
anchor_bottom = -0.00110483
margin_left = 27.0652
margin_top = 126.975
margin_right = 327.065
margin_bottom = 297.975
custom_fonts/font = SubResource( 3 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSprite" type="Sprite" parent="Camera2D/HUD"]
position = Vector2( 180, 320 )
z_index = -6
texture = ExtResource( 8 )

[node name="MuteButton" type="Button" parent="Camera2D/HUD"]
margin_left = 280.667
margin_top = 7.15989
margin_right = 356.667
margin_bottom = 77.1599
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highScore" type="Label" parent="Camera2D/HUD"]
margin_left = 3.53558
margin_top = 296.278
margin_right = 298.536
margin_bottom = 310.278
custom_fonts/font = SubResource( 4 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="Camera2D/HUD"]
visible = false
position = Vector2( 2.12134, 538.815 )
normal = ExtResource( 16 )
pressed = ExtResource( 12 )
shape = SubResource( 5 )
shape_visible = false
passby_press = true
action = "ui_left"
visibility_mode = 1

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="Camera2D/HUD"]
visible = false
position = Vector2( 102.531, 540.229 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )
shape = SubResource( 6 )
shape_visible = false
passby_press = true
action = "ui_right"
visibility_mode = 1

[node name="TouchScreenButtonShoot" type="TouchScreenButton" parent="Camera2D/HUD"]
visible = false
position = Vector2( 258.801, 537.401 )
normal = ExtResource( 13 )
pressed = ExtResource( 11 )
shape = SubResource( 7 )
shape_visible = false
passby_press = true
action = "ui_select"
visibility_mode = 1

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 1.75

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Sprite" parent="." instance=ExtResource( 7 )]
position = Vector2( 180, 320 )

[node name="SettingsUpdate" type="Timer" parent="."]
one_shot = true
[connection signal="spawn" from="Camera2D/HUD/SpawnManager" to="." method="_on_SpawnManager_spawn"]
[connection signal="pressed" from="Camera2D/HUD/StartButton" to="." method="_start_game"]
[connection signal="pressed" from="Camera2D/HUD/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
[connection signal="timeout" from="SettingsUpdate" to="." method="_on_SettingsUpdate_timeout"]
